cleanup quorum configuration