@@ -79,6 +79,7 @@ set JAVA_OPTS_SCRIPT=-XX:+HeapDumpOnOutOfMemoryError ^
   --add-exports java.management/sun.management=ALL-UNNAMED ^
   --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED ^
   --add-opens java.base/java.nio.channels.spi=ALL-UNNAMED ^
+  --add-opens java.base/java.lang=ALL-UNNAMED  ^
   -Dpolyglot.engine.WarnInterpreterOnly=false ^
   -Djava.awt.headless=true ^
   -Dfile.encoding=UTF8 ^
